# folio-back-end

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py  wiring.py  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py
app/api/: swagger.py  swagger_models.py  swagger_resources.py
app/application/: __init__.py
app/domain/: project_document.py  project_photo.py
app/infrastructure/: __init__.py  jwt_handlers.py  rate_limiter.py
config/: __init__.py
infrastructure/: __init__.py
infrastructure/queue/: __init__.py  rq_worker.py
migrations/: env.py
migrations/versions/: 0d18fab50ecb_add_tasks_table_for_kanban_planning.py  0e9904e84af6_merge_photos_and_company_role_heads.py  1144dd90e533_add_refund_to_invoicetype_enum.py  20a22df3582d_labor_supplement_hours.py  2d9c35848b9b_companies_module.py  383b1db5c576_bibliotheque_tables.py  39cb464db20a_add_invoice_attachments_table.py  3a1b2c4d5e6f_add_project_tags_and_tag_id_columns.py  3c8eef064050_add_refunded_by_to_invoices.py  6689f8c8b051_add_projects_table_and_user_projects_.py  7f6bfdbaee86_create_auth_tables_for_users_roles_and_.py  818ba2f5ef63_add_project_documents.py  925c1d70fc82_add_service_month_to_invoices.py  97e7156ea751_add_billing_module.py  a1b2c3d4e5f6_add_labor_roles.py  a1b2c3d4e5f6_add_workers_and_labor_entries_tables.py  a1b2c3d4e5f6_merge_photos_and_company_role_heads.py  a1b2c3d4e5f7_add_labor_activities.py  a1b2c4d8f3e9_notes_add_category_relax_reminders.py  a1c3e5f7b2d4_restructure_funds_release_items_with_vat_rate.py  a1c3e5f7b9d2_normalize_library_categories.py  a1d4f7b20c93_refunded_by_both_for_bank_linked_rows.py  a2b3c4d5e6f7_add_budget_and_budget_source_to_projects.py  a3f7b8c9d0e1_fix_billing_document_number_unique_per_company.py  a4f5b6c7d8e9_add_funds_release_link_columns.py  a9b8c7d6e5f4_labor_activity_one_entry_per_day_drop_description.py  b040af6aad78_add_invoices_table.py  b1c2d3e4f5a6_add_persons_and_company_scoping.py  b2c3d4e5f6a7_add_project_document_tags.py  b5c6d7e8f9a0_backfill_default_user_role.py  b7c1f2e3a4d5_adjust_role_permissions.py  b8e2d1c47a90_add_avatar_url_to_workers.py  b8e2d4f6a1c3_backfill_tva_lines_into_funds_release_invoices.py  c1d2e3f4g5h6_add_shift_type_to_labor_entries.py  c3d4e5f6a7b8_add_invoice_prefix_to_projects.py  c4e8a2f1d3b6_add_refundable_status_to_invoices.py  c78cbcf5a73b_add_project_photos.py  (+15 more)
outbox/: __init__.py  processor.py
scripts/: backfill_persons.py  check_migration_heads.py  purge_soft_deleted_documents.py  reset_password.py  seed.py  seed_auth.py  seed_invitations.py  seed_invoices.py  seed_labor.py  seed_memberships.py  seed_notes.py  seed_persons.py  seed_project.py  seed_users.py
stack/queue/: rq_worker.py
tests/: conftest.py  test_auth_endpoints.py  test_auth_models.py  test_bulk_log_with_conflicts.py  test_cross_project_conflicts.py  test_domain_entities.py  test_labor_repository.py  test_labor_role_usecases.py  test_labor_usecases.py  test_project_repository.py  test_project_usecases.py  test_worker_rate_change_domain.py
(+615 files in other folders)
