[project]
name = "construction-backend"
version = "0.2.27"
description = "Construction Management System - Backend API"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "flask-cors>=4.0.0",
    "rq>=1.16.0",
    "redis>=5.0.0",
    "gunicorn>=21.0.0",
    "sqlalchemy>=2.0.45",
    "flask-migrate>=4.1.0",
    "argon2-cffi>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.1",
    "flask-jwt-extended>=4.7.1",
    "flask-login>=0.6.3",
    "pydantic>=2.12.5",
    "flask-limiter>=3.5.0",
    "email-validator>=2.0.0",
    "flask-restx>=1.3.2",
    "boto3>=1.42.96",
    "openpyxl>=3.1",
    "reportlab>=4.4",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "config*", "outbox*", "infrastructure*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
    "pypdf>=5.0",
]
